# TestAgent

./: .gitignore  README.md  SPEC.md  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: docs.yml
docs/: CNAME  index.md
docs/api/: assertions.md  cli.md  core.md  decorators.md
docs/concepts/: configuration.md  results.md  testing.md
docs/examples/: advanced.md  basic.md
docs/features/: assertions.md  caching.md  decorators.md  discovery.md  fixtures.md  outcomes.md  parallel.md  parametrize.md  timing.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
docs/typescript/: api.md  cli.md  examples.md  index.md
src/aitestagent-ts/: README.md  package.json
src/aitestagent-ts/src/: index.test.ts  index.ts
src/testagent/: __init__.py  assertions.py  cache.py  cli.py  collector.py  config.py  core.py  decorators.py  outcomes.py  parallel.py  protocols.py  registry.py  results.py  timing.py
src/testagent-ts/: tsconfig.json  tsup.config.ts
src/testagent-ts/src/: cli.ts  test.ts
src/testagent/judges/: __init__.py  accuracy.py  api.py  code.py  criteria_judge.py  safety.py
tests/: __init__.py  test_assertions.py  test_cache.py  test_collector.py  test_core.py  test_decorators.py  test_outcomes.py  test_parallel.py  test_parametrize.py  test_timing.py
